--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,14 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+#######################
+.vscode/
+.idea/
+
+.DS_Store
+cached*
+
+model/
+vocab/
+.gitignore
